Version 1.8 (2.0 Alpha 8)
-------------------------
-new internal mesh system
-new horizon distance setting
-added render distance limits for small objects
-added lighting system

Version 1.7 (2.0 Alpha 7)
-------------------------
-added braille fonts
-added support for elevator panel switches and knobs
-added elevator fan toggle
-door open and close buttons now support specific doors
-added door hold feature
-elevator now resets queue search direction if last entry in active queue is in the opposite movement direction
-elevator doors no longer try to open if you press the call button as it's passing the floor
-floor buttons now properly add floor route if pressed on the same floor as elevator is moving
-Fix for vertically-moving elevator doors' offset calculations
-Elevators now properly sync camera offsets if a person boards a moving elevator
-Fixed an issue where the random activity system wouldn't select the top serviced floor
-added standard doors to elevator objects
-added sound support to doors
-fixed a crash that occurred if ServicedFloors included an invalid floor number
-added internal error reporting system
-new object tree browser
-elevator parking fixes
-call cancel now only works in fire phase 2 mode
-elevators now reroute properly if switched to fire phase 1 mode while moving
-added object deletion support
-added elevator run/stop states
-arrival notification can now be performed at the start of leveling or at deceleration
-Added adjacent floor check - eliminates crashes related to trying to create floors in the wrong order
-Elevator doors no longer open when parking
-some interior elevator objects now stay enabled while user is outside elevator
-grouped floors now also enable stairwells and shafts
-Added braille callbuttons
-Elevator beep sounds now support floor number substitution
-added support for direction message sounds
-added separate folder for screenshots, and switched format to jpeg
-added support for elevator music