@@ -969,7 +969,7 @@ Object* Floor::AddLight(const char *name, int type, csVector3 position, csVector
 Object* Floor::AddModel(const char *name, const char *filename, csVector3 &position, csVector3 &rotation, float max_render_distance, float scale_multiplier)
 {
 	//add a model
-	Model* model = new Model(name, filename, position, rotation, max_render_distance, scale_multiplier);
+	Model* model = new Model(name, filename, position + csVector3(0, GetBase(), 0), rotation, max_render_distance, scale_multiplier);
 	ModelArray.Push(model);
 	return model->object;
 }
